# makima-agent

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  _create_all.py  _create_db.py  agent  chat.bat  cli.py  docker-compose.yml  launcher.py  makima-server  makima-server.bat  start  start_server.bat  stop_server.bat
.makima/: config-center.json  modes.yaml  persona.yaml
agent-role/Assets/Resources/: BG.mat  PerformanceTestRunInfo.json
agent-role/Assets/Resources/2948057129/NIKKE Makima/: atlases_0_atlas_0.atlas.txt  atlases_0_atlas_0_Atlas.asset  atlases_0_atlas_0_c800_skillcut.mat  atlases_0_atlas_0_c800_skillcut_2.mat  model0.json  skeleton_0.json  skeleton_0_SkeletonData.asset
agent-role/Assets/Resources/3111154553/: config.json
agent-role/Assets/Resources/3111154553/[NIKKE] Makima/: atlases_0_atlas_0_Atlas.asset  atlases_0_atlas_0_c800_00.mat  model0.json  skeleton_0_SkeletonData.asset
agent-role/Assets/Scenes/: Makima.unity
agent-role/Assets/Scripts/: AgentAnimationBridge.cs  SpineAnimationManager.cs  SpineAnimationTest.cs  SpineModelSetup.cs  UnityWebSocketClient.cs
agent-role/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
agent-role/Assets/Settings/Build Profiles/: WebGL.asset
agent-role/Assets/Spine Examples/Scripts/Sample Components/Sample VertexEffects/: TwoByTwoTransformEffectExample.cs
agent-role/Assets/Spine/2948057129/: config.json
agent-role/Assets/Spine/Runtime/spine-unity/Shaders/: Spine-Skeleton.shader
agent-role/ProjectSettings/: ProjectSettings.asset
apps/: desktop
apps/backend/: .env.example  pyproject.toml
apps/backend/assets/marketplace/: mcps.yml
apps/backend/src/makima/: __init__.py  app.py  auth.py  db.py  deps.py  middleware.py  models.py
apps/backend/src/makima/audit/: __init__.py  models.py  service.py
apps/backend/src/makima/auth/: __init__.py  models.py  service.py
apps/backend/src/makima/clients/: __init__.py  llm.py  memory.py  retry.py  rust_client.py
apps/backend/src/makima/config_center/: __init__.py  service.py
apps/backend/src/makima/core/: __init__.py  db.py  deps.py  middleware.py  models.py
apps/backend/src/makima/knowledge/: __init__.py  ingest.py  models.py  retriever.py
apps/backend/src/makima/marketplace/: __init__.py  installer.py  loader.py  models.py  service.py
apps/backend/src/makima/memory/: __init__.py  service.py
apps/backend/src/makima/modes/: __init__.py  builtin.py  loader.py  registry.py  tool_groups.py
apps/backend/src/makima/observability/: __init__.py  metrics.py  tracing.py
apps/backend/src/makima/orchestrator/: __init__.py  approval.py  attachment_context.py  context.py  emotion_parser.py  graph.py  runner.py
apps/backend/src/makima/persona/: __init__.py  builtin.py  loader.py
apps/backend/src/makima/prompts/: engine.py  types.py
apps/backend/src/makima/prompts/sections/: __init__.py  capabilities.py  context.py  custom.py  emotion.py  modes.py  personality.py  role.py  rules.py  tools.py
apps/backend/src/makima/queue/: __init__.py  celery_app.py  tasks.py
apps/backend/src/makima/routes/: __init__.py  admin.py  attachments.py  audit.py  auth.py  health.py  knowledge.py  marketplace.py  mcp.py  memory.py  metrics.py  model_profiles.py  modes.py  persona.py  sessions.py  tasks.py  voice.py
apps/backend/src/makima/security/: __init__.py  rbac.py
apps/backend/src/makima/sessions/: __init__.py  models.py
apps/backend/src/makima/tasks/: __init__.py  models.py
apps/backend/src/makima/tools/: __init__.py  file_tool.py  http_tool.py  path_whitelist.py  registry.py  rust_client.py  rust_tools.py  shell_tool.py  switch_mode.py
apps/backend/src/makima/tools/proto/: __init__.py
apps/backend/tests/: __init__.py  conftest.py  test_health.py
apps/desktop-egui/: Cargo.toml
apps/desktop-egui/src/: app.rs  backend_launcher.rs  main.rs  theme.rs  tts.rs  websocket_bridge.rs
apps/desktop-egui/src/api/: attachments.rs  audit.rs  auth.rs  config.rs  health.rs  knowledge.rs  marketplace.rs  mcp.rs  memory.rs  mod.rs  model_profiles.rs  modes.rs  persona.rs  sessions.rs  tasks.rs  voice.rs
apps/desktop-egui/src/config/: app_config.rs  mod.rs  secure_store.rs
apps/desktop-egui/src/state/: app_state.rs  chat_state.rs  mod.rs  settings_state.rs  task_state.rs  voice_state.rs
apps/desktop-egui/src/ui/: activity_bar.rs  bottom_drawer.rs  dock.rs  mod.rs  recent_chat.rs  shell.rs  side_nav.rs  status_bar.rs  top_bar.rs
apps/desktop-egui/src/ui/chat/: bubbles.rs  composer.rs  diff_view.rs  markdown_render.rs  mod.rs  transcript.rs
apps/desktop-egui/src/ui/panels/: audit.rs  avatar.rs  avatar_webview.rs  diagnostics.rs  inspector.rs  knowledge.rs  login.rs  marketplace.rs  mcp.rs  memory.rs  mod.rs  model_config.rs  modes.rs  persona.rs  settings.rs  voice.rs
apps/desktop-egui/src/voice/: audio_capture.rs  audio_playback.rs  connection.rs  mod.rs
character-webgl/: index.html
docs/: avatar-webgl-integration-plan.md  spine-single-model-animation-manager-plan.md
docs/architecture/: agent-backend-roadmap.md
docs/frontend-egui/: README.md  chat-attachments-and-file-access-todo.md  dock-layout-redesign.md  settings-panel-layout-review.md  voice-feature-gating-todo.md  webrtc-build-guide.md
infra/docker/: agent-orchestrator.Dockerfile  backend.Dockerfile  tool-runtime.Dockerfile
services/tool-runtime/: Cargo.toml  build.rs
services/tool-runtime/proto/: tool_runtime.proto
services/tool-runtime/src/: checkpoint.rs  lib.rs  main.rs  server.rs  tokens.rs  tracker
services/tool-runtime/src/document/: chunker.rs  mod.rs
services/tool-runtime/src/sandbox/: command_filter.rs  mod.rs  network_policy.rs  path_security.rs
services/tool-runtime/src/tools/: file.rs  http.rs  mod.rs  shell.rs
services/voice-runtime/: README.md  agent.py  client.py  fish_audio.py  pyproject.toml  test_tts.py  test_voice.py
test/: debug_emotion.py  standalone_ws_server.py  test_agent_emotion  test_emotion_direct.py  test_emotion_simple.py  test_websocket_animation.py  tts_test.py  webgl_server.py
