[package]
name = "makima-desktop"
version = "0.1.0"
edition = "2021"
description = "Makima Agent Desktop Frontend - egui native application"

[dependencies]
# Core GUI
eframe = { version = "0.33", default-features = false, features = ["glow"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["default"] }
egui_dock = { version = "0.18", features = ["serde"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP/SSE client
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "multipart"] }
futures-util = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local paths
directories = "5"

# Secure credential storage
keyring = "3"

# File dialog
rfd = "0.14"

# Clipboard
copypasta = "0.10"

# Notifications
egui-toast = "0.12"

# Markdown rendering
pulldown-cmark = "0.12"

# URL parsing
url = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Voice / LiveKit (optional — requires webrtc-sys native build)
livekit = { version = "0.7", optional = true }
livekit-api = { version = "0.5", optional = true }
cpal = { version = "0.15", optional = true }

# Avatar WebView (optional)
wry = { version = "0.40", optional = true }

[features]
default = []
voice = ["livekit", "livekit-api", "cpal"]
avatar = ["wry"]  # Enable 3D avatar WebView rendering

[[bin]]
name = "makima-desktop"
path = "src/main.rs"
