[project]
name = "makima-voice-runtime"
version = "0.1.0"
description = "Makima Voice Runtime - Real-time voice AI agent using LiveKit"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents>=0.12.0",
    "livekit-plugins-openai>=0.10.0",
    "livekit-plugins-silero>=0.7.0",
    "livekit-plugins-deepgram>=0.4.0",
    "livekit-plugins-elevenlabs>=0.7.0",
    "livekit>=0.17.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"