[project]
name = "makima-voice-runtime"
version = "0.3.0"
description = "Makima Voice Runtime - Real-time voice interface using LiveKit RTC + Fish Audio"
requires-python = ">=3.11"
dependencies = [
    "livekit>=0.17.0",
    "python-dotenv>=1.0.0",
    "makima-common[voice]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"